2020-03-06 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c,
	  support/regression/tests/bug-2982.c:
	  Fix bug #2982.
	* src/z80/gen.c:
	  Improve code generation for 16-bit addition with literal.

2020-03-02 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/mcs51/gen.c,
	* src/ds390/gen.c: fixed bug #2980

2020-02-13 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/z80/peeph-z80.def,
	  src/z80/peeph-r2k.def:
	  Improve flexibility of some peephole rules.

2020-02-13 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/z80/peeph-z80.def:
	  Additional z80 peephole rules picked from patch #314 by b-s-a.

2020-02-12 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCopt.c,
	  src/z80/gen.c:
	  Allow non-literal third argument for ldir-memcpy().

2020-02-12 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/z80/gen.c:
	  Use macros for immediate data to improve assembler portability, patch #315 by b-s-a.

2020-02-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-gbz80.def:
	  Fix bug #2974.

2020-01-23 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/linksrc/Makefile.in:
	  Fix bug #2969.

2020-01-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix bug #2967.

2020-01-19 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Fix a typo in documentation.

2020-01-18 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Update manual.
	* .version,
	  doc/INSTALL.txt,
	  sdcc.spec:
	  Bump version in preparation of 4.0.0 release.

2020-01-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c,
	  support/regression/tests/bug-2966.c:
	  Fix bug #2966.

2020-01-14 Benedikt Freisen <b.freisen AT gmx.net>

	* src/SDCCglue.c,
	  support/regression/tests/fptr_cast_array_init.c:
	  Implement feature request #598 (Cannot initialize arrays with type cast function pointers).

2020-01-13 Benedikt Freisen <b.freisen AT gmx.net>
